--- a/elestio.yaml
+++ b/elestio.yaml
@@ -1,6 +1,6 @@
 config:
     runTime: 'NodeJs'
-    version: '16'
+    version: 'lts'
     framework: 'React'
     buildCommand: 'npm run build'
     buildDir: 'build'
